--- a/assets/hub/nvidia_deeplearningexamples_efficientnet.ipynb
+++ b/assets/hub/nvidia_deeplearningexamples_efficientnet.ipynb
@@ -2,6 +2,16 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/LogikerKit/MuellerConeFilter/blob/master/assets/hub/nvidia_deeplearningexamples_efficientnet.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "bottom-garden",
       "metadata": {
         "id": "bottom-garden"
@@ -46,11 +56,11 @@
       "execution_count": 7,
       "id": "atlantic-question",
       "metadata": {
-        "id": "atlantic-question",
-        "outputId": "5bba6734-8bb0-4581-c6b3-c551d2bbb9ca",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "atlantic-question",
+        "outputId": "5bba6734-8bb0-4581-c6b3-c551d2bbb9ca"
       },
       "outputs": [
         {
@@ -96,14 +106,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 18,
       "id": "vocal-framework",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "vocal-framework",
-        "outputId": "5d1e9a20-57fd-42da-c9a2-01ef5166f41f"
+        "outputId": "9ccc61a3-2661-4774-fe75-68dff0d27089"
       },
       "outputs": [
         {
@@ -138,6 +148,8 @@
         "loss_fn_vgg = lpips.LPIPS(net='vgg') # closer to \"traditional\" perceptual loss, when used for optimization\n",
         "\n",
         "import torch\n",
+        "from PIL import Image\n",
+        "from torchvision.transforms import ToTensor\n",
         "img0 = torch.zeros(1,3,64,64) # image should be RGB, IMPORTANT: normalized to [-1,1]\n",
         "img1 = torch.zeros(1,3,64,64)\n",
         "d = loss_fn_alex(img0, img1)\n",
@@ -170,11 +182,11 @@
       "execution_count": 9,
       "id": "alike-allen",
       "metadata": {
-        "id": "alike-allen",
-        "outputId": "d5d87243-152d-47c3-d187-9c1b719bf0b5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "alike-allen",
+        "outputId": "d5d87243-152d-47c3-d187-9c1b719bf0b5"
       },
       "outputs": [
         {
@@ -677,11 +689,11 @@
       "execution_count": 5,
       "id": "senior-campus",
       "metadata": {
-        "id": "senior-campus",
-        "outputId": "1345b461-4b00-4aae-9280-5c6369514bfa",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "senior-campus",
+        "outputId": "1345b461-4b00-4aae-9280-5c6369514bfa"
       },
       "outputs": [
         {
@@ -716,15 +728,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "source": [
+        "for uri, result in zip(uris, results):\n",
+        "    img = Image.open(requests.get(uri, stream=True).raw)\n",
+        "    img.thumbnail((256,256), Image.ANTIALIAS)\n",
+        "    plt.imshow(img)\n",
+        "    plt.show()\n",
+        "    print(result)"
+      ],
       "metadata": {
-        "outputId": "fdfb2141-0659-4170-f499-f641a3899345",
+        "id": "EEXzwIxA_tEh",
+        "outputId": "6688db72-42f1-495f-f0a5-6f6d7053d5f0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        },
-        "id": "9z-oZgAJocPo"
+        }
       },
+      "id": "EEXzwIxA_tEh",
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "display_data",
@@ -799,98 +820,43 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[('kelpie', '52.7%'), ('malinois', '4.1%'), ('groenendael', '3.0%'), ('schipperke', '3.0%'), ('Scottish deerhound, deerhound', '2.6%')]\n",
-            "<class 'PIL.JpegImagePlugin.JpegImageFile'>\n"
+            "[('kelpie', '52.7%'), ('malinois', '4.1%'), ('groenendael', '3.0%'), ('schipperke', '3.0%'), ('Scottish deerhound, deerhound', '2.6%')]\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 23,
+      "metadata": {
+        "outputId": "3e270cd2-a579-4b31-e9be-34d38614ae07",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
         },
+        "id": "9z-oZgAJocPo"
+      },
+      "outputs": [
         {
-          "output_type": "error",
-          "ename": "AttributeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-16-ab14b32d6d0f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0mimg1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mthumbnail\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m256\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m256\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mImage\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mANTIALIAS\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimg1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m \u001b[0mimg1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mToTensor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m \u001b[0mimg2\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mImage\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrequests\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0muris\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstream\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mraw\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0mimg2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mthumbnail\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m256\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m256\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mImage\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mANTIALIAS\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mAttributeError\u001b[0m: 'JpegImageFile' object has no attribute 'ToTensor'"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'PIL.JpegImagePlugin.JpegImageFile'>\n",
+            "tensor([[[[0.6132]]]], grad_fn=<AddBackward0>)\n"
           ]
         }
       ],
       "source": [
-        "for uri, result in zip(uris, results):\n",
-        "    img = Image.open(requests.get(uri, stream=True).raw)\n",
-        "    img.thumbnail((256,256), Image.ANTIALIAS)\n",
-        "    plt.imshow(img)\n",
-        "    plt.show()\n",
-        "    print(result)\n",
         "\n",
         "img1=Image.open(requests.get(uris[0], stream=True).raw)\n",
         "img1.thumbnail((256,256), Image.ANTIALIAS)\n",
         "print(type(img1))\n",
-        "img1.ToTensor()\n",
+        "img1=ToTensor()(img1).unsqueeze(0)\n",
         "img2=Image.open(requests.get(uris[1], stream=True).raw)\n",
         "img2.thumbnail((256,256), Image.ANTIALIAS)\n",
-        "img2.ToTensor()\n",
-        "loss_fn_alex(img1,img2)"
+        "img2=ToTensor()(img2).unsqueeze(0)\n",
+        "print(loss_fn_alex(img1,img2))"
       ],
       "id": "9z-oZgAJocPo"
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "5d1e9a20-57fd-42da-c9a2-01ef5166f41f",
-        "id": "rD3o76n8mS4c"
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Using cpu for inference\n",
-            "Setting up [LPIPS] perceptual loss: trunk [alex], v[0.1], spatial [off]\n",
-            "Loading model from: /usr/local/lib/python3.7/dist-packages/lpips/weights/v0.1/alex.pth\n",
-            "Setting up [LPIPS] perceptual loss: trunk [vgg], v[0.1], spatial [off]\n",
-            "Loading model from: /usr/local/lib/python3.7/dist-packages/lpips/weights/v0.1/vgg.pth\n",
-            "tensor([[[[0.]]]], grad_fn=<AddBackward0>)\n"
-          ]
-        }
-      ],
-      "source": [
-        ""
-      ],
-      "id": "rD3o76n8mS4c"
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "outputId": "5d1e9a20-57fd-42da-c9a2-01ef5166f41f",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "r8Yk8t0CmB4B"
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Using cpu for inference\n",
-            "Setting up [LPIPS] perceptual loss: trunk [alex], v[0.1], spatial [off]\n",
-            "Loading model from: /usr/local/lib/python3.7/dist-packages/lpips/weights/v0.1/alex.pth\n",
-            "Setting up [LPIPS] perceptual loss: trunk [vgg], v[0.1], spatial [off]\n",
-            "Loading model from: /usr/local/lib/python3.7/dist-packages/lpips/weights/v0.1/vgg.pth\n",
-            "tensor([[[[0.]]]], grad_fn=<AddBackward0>)\n"
-          ]
-        }
-      ],
-      "source": [
-        ""
-      ],
-      "id": "r8Yk8t0CmB4B"
     },
     {
       "cell_type": "markdown",
@@ -921,7 +887,8 @@
   "metadata": {
     "colab": {
       "name": "nvidia_deeplearningexamples_efficientnet.ipynb",
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "language_info": {
       "name": "python"
